# go-tree-sitter

./: BUILD.bazel  MODULE.bazel  README.md  bindings_test.go  example_test.go  go.mod
_automation/: grammars.json
_automation/treesitter_updater/: BUILD.bazel
_examples/: BUILD.bazel  main.go
_examples/predicates/: BUILD.bazel  main.go
bash/: BUILD.bazel  binding.go  binding_test.go
c/: BUILD.bazel  binding.go  binding_test.go
cpp/: BUILD.bazel  binding.go  binding_test.go
csharp/: BUILD.bazel  binding.go  binding_test.go
css/: BUILD.bazel  binding.go  binding_test.go
cue/: BUILD.bazel  binding.go  binding_test.go
dockerfile/: BUILD.bazel  binding.go  binding_test.go
elixir/: BUILD.bazel  binding.go  binding_test.go
elm/: BUILD.bazel  binding.go  binding_test.go
golang/: BUILD.bazel  binding.go  binding_test.go
groovy/: BUILD.bazel  binding.go  binding_test.go
hcl/: BUILD.bazel  binding.go  binding_test.go
html/: BUILD.bazel  binding.go  binding_test.go
java/: BUILD.bazel  binding.go  binding_test.go
javascript/: BUILD.bazel  binding.go  binding_test.go
kotlin/: BUILD.bazel  binding.go  binding_test.go
lua/: BUILD.bazel  binding.go  binding_test.go
markdown/: BUILD.bazel  binding.go  binding_test.go
markdown/tree-sitter-markdown/: BUILD.bazel  binding.go  binding_test.go
markdown/tree-sitter-markdown-inline/: BUILD.bazel  binding.go  bingding_test.go
ocaml/: BUILD.bazel  binding.go  binding_test.go
php/: BUILD.bazel  binding.go  binding_test.go
protobuf/: BUILD.bazel  binding.go  binding_test.go
python/: BUILD.bazel  binding.go  binding_test.go
ruby/: BUILD.bazel  binding.go  binding_test.go
rust/: BUILD.bazel  binding.go  binding_test.go
scala/: BUILD.bazel  binding.go  binding_test.go
sql/: BUILD.bazel  binding.go  binding_test.go
svelte/: BUILD.bazel  binding.go  binding_test.go
swift/: BUILD.bazel  binding.go  binding_test.go
toml/: BUILD.bazel  binding.go  binding_test.go
typescript/tsx/: BUILD.bazel  binding.go  binding_test.go
typescript/typescript/: BUILD.bazel  binding.go  binding_test.go
yaml/: BUILD.bazel  binding.go  binding_test.go
