load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "_examples_lib",
    srcs = ["main.go"],
    importpath = "github.com/dougthor42/go-tree-sitter/_examples",
    visibility = ["//visibility:private"],
    deps = [
        "//:go-tree-sitter",
        "//javascript",
    ],
)

go_binary(
    name = "_examples",
    embed = [":_examples_lib"],
    visibility = ["//visibility:public"],
)
