load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "c",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
    ],
    cgo = True,
    importpath = "github.com/smacker/go-tree-sitter/c",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "c_test",
    srcs = ["binding_test.go"],
    deps = [
        ":c",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
