load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "elixir",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
        "scanner.c",
        "//:common_libs",
    ],
    cgo = True,
    importpath = "github.com/smacker/go-tree-sitter/elixir",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "elixir_test",
    srcs = ["binding_test.go"],
    deps = [
        ":elixir",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
