load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "elm",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
        "scanner.c",
    ],
    cgo = True,
    cxxopts = ["-std=gnu++11"],
    importpath = "github.com/smacker/go-tree-sitter/elm",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "elm_test",
    srcs = ["binding_test.go"],
    deps = [
        ":elm",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
