load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "html",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
        "scanner.c",
        "tag.h",
    ],
    cgo = True,
    importpath = "github.com/smacker/go-tree-sitter/html",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "html_test",
    srcs = ["binding_test.go"],
    deps = [
        ":html",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
