load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "java",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
    ],
    cgo = True,
    importpath = "github.com/smacker/go-tree-sitter/java",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "java_test",
    srcs = ["binding_test.go"],
    deps = [
        ":java",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
