load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "javascript",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
        "scanner.c",
        "//:common_libs",
    ],
    cgo = True,
    importpath = "github.com/dougthor42/go-tree-sitter/javascript",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "javascript_test",
    srcs = ["binding_test.go"],
    deps = [
        ":javascript",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
