load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "markdown",
    srcs = ["binding.go"],
    importpath = "github.com/dougthor42/go-tree-sitter/markdown",
    visibility = ["//visibility:public"],
    deps = [
        "//:go-tree-sitter",
        "//markdown/tree-sitter-markdown",
        "//markdown/tree-sitter-markdown-inline",
    ],
)

go_test(
    name = "markdown_test",
    srcs = ["binding_test.go"],
    deps = [
        ":markdown",
        "@com_github_stretchr_testify//assert",
    ],
)
