load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "php",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
        "scanner.c",
        "scanner.h",
    ],
    cgo = True,
    importpath = "github.com/smacker/go-tree-sitter/php",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "php_test",
    srcs = ["binding_test.go"],
    deps = [
        ":php",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
