load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protobuf",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
    ],
    cgo = True,
    importpath = "github.com/dougthor42/go-tree-sitter/protobuf",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "protobuf_test",
    srcs = ["binding_test.go"],
    deps = [
        ":protobuf",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
