load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "python",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
        "scanner.c",
    ],
    cgo = True,
    importpath = "github.com/smacker/go-tree-sitter/python",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "python_test",
    srcs = ["binding_test.go"],
    deps = [
        ":python",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
