load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ruby",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
        "scanner.c",
    ],
    cgo = True,
    importpath = "github.com/smacker/go-tree-sitter/ruby",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "ruby_test",
    srcs = ["binding_test.go"],
    deps = [
        ":ruby",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
