load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rust",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
        "scanner.c",
        "//:common_libs",
    ],
    cgo = True,
    importpath = "github.com/dougthor42/go-tree-sitter/rust",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "rust_test",
    srcs = ["binding_test.go"],
    deps = [
        ":rust",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
