load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "scala",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
        "scanner.c",
        "stack.h",
        "//:common_libs",
    ],
    cgo = True,
    importpath = "github.com/dougthor42/go-tree-sitter/scala",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "scala_test",
    srcs = ["binding_test.go"],
    deps = [
        ":scala",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
