load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sql",
    srcs = [
        "binding.go",
        "parser.c",
        "scanner.c",
        "tree_sitter/parser.h",
    ],
    cgo = True,
    importpath = "github.com/smacker/go-tree-sitter/sql",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "sql_test",
    srcs = ["binding_test.go"],
    deps = [
        ":sql",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
