load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "swift",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
        "scanner.c",
    ],
    cgo = True,
    importpath = "github.com/dougthor42/go-tree-sitter/swift",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "swift_test",
    srcs = ["binding_test.go"],
    deps = [
        ":swift",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
