load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "toml",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
        "scanner.c",
    ],
    cgo = True,
    importpath = "github.com/smacker/go-tree-sitter/toml",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "toml_test",
    srcs = ["binding_test.go"],
    deps = [
        ":toml",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
