load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "yaml",
    srcs = [
        "binding.go",
        "parser.c",
        "parser.h",
        "scanner.cc",
    ],
    cgo = True,
    importpath = "github.com/smacker/go-tree-sitter/yaml",
    visibility = ["//visibility:public"],
    deps = ["//:go-tree-sitter"],
)

go_test(
    name = "yaml_test",
    srcs = ["binding_test.go"],
    deps = [
        ":yaml",
        "//:go-tree-sitter",
        "@com_github_stretchr_testify//assert",
    ],
)
