load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "treesitter_updater_lib",
    srcs = ["main.go"],
    importpath = "github.com/smacker/go-tree-sitter/_automation/treesitter_updater",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "treesitter_updater",
    embed = [":treesitter_updater_lib"],
    visibility = ["//visibility:public"],
)
